force-app/main/default/objects/Position__c/fields/Education_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Education_Requirements__c</fullName>
    <label>Education Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>