force-app/main/default/objects/Position__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <formula>If(Days_Open__c&gt; 20, &apos;Red&apos;, If(Days_Open__c&gt; 10, &apos;Yellow&apos;, &apos;Green&apos;))</formula>
    <label>Severity</label>
    <type>Text</type>
</CustomField>