force-app/main/default/objects/Position__c/validationRules/Close_Date_not_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_not_Set</fullName>
    <active>true</active>
    <description>Close Date is not set</description>
    <errorConditionFormula>AND(
    ISBLANK(Close_Date__c),
    ISPICKVAL(Status__c, &quot;Closed - Filled&quot;) 
				    || ISPICKVAL(Status__c, &quot;Closed - Not Approved&quot;) 
				        || ISPICKVAL(Status__c, &quot;Closed - Canceled&quot;)
)</errorConditionFormula>
    <errorMessage>Close Date is not set</errorMessage>
</ValidationRule>