force-app/main/default/objects/Position__c/validationRules/Min_Pay_less_than_Max_Pay.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Pay_less_than_Max_Pay</fullName>
    <active>true</active>
    <description>Min Pay should not be more than Max Pay</description>
    <errorConditionFormula>Min_Pay__c &gt; Max_Pay__c</errorConditionFormula>
    <errorDisplayField>Min_Pay__c</errorDisplayField>
    <errorMessage>Min Pay should never be more than Max Pay</errorMessage>
</ValidationRule>