force-app/main/default/objects/Position__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Days_Open__c</columns>
    <columns>Severity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>