force-app/main/default/objects/Position__c/listViews/Non_Technical_Positions.listView-meta.xml
<ListView>
    <fullName>Non_Technical_Positions</fullName>
    <columns>NAME</columns>
    <columns>Functional_Area__c</columns>
    <columns>Job_Level__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Functional_Area__c</field>
        <operation>contains</operation>
        <value>Miscellaneous,Retail Operations,Warehousing</value>
    </filters>
    <label>Non Technical Positions</label>
</ListView>