force-app/main/default/objects/Position__c/listViews/Open_Positions.listView-meta.xml
<ListView>
    <fullName>Open_Positions</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Open_Date__c</columns>
    <columns>Days_Open__c</columns>
    <columns>Hire_By__c</columns>
    <columns>Close_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>contains</operation>
        <value>New Position,Pending Approval,Open - Approved</value>
    </filters>
    <label>Open Positions</label>
</ListView>