force-app/main/default/objects/Position__c/listViews/Technical_Positions.listView-meta.xml
<ListView>
    <fullName>Technical_Positions</fullName>
    <columns>NAME</columns>
    <columns>Functional_Area__c</columns>
    <columns>Job_Level__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Functional_Area__c</field>
        <operation>contains</operation>
        <value>Finance,Human Resources,Information Technology</value>
    </filters>
    <label>Technical Positions</label>
</ListView>